src/css/_base.scss
/* ... */
.hidden-checkbox {
  @include visuallyhidden;
  position: fixed;
}

#menu:checked ~ .region--header {
  .menu-toggle {
    .icon {
      &:first-child {
        display: none;
      }

      &:last-child {
        display: block;
      }
    }
  }

  .menu-list {
    display: block;
  }
}

.region--header {
  display: block;
  position: relative;
  z-index: 10;
  padding: 1em 0;

  .masthead {
    margin: 0 auto 1em;
    padding: 0;

    .grid {
      display: flex;
      flex-flow: row nowrap;
      align-items: center;
      justify-content: space-between;
    }

    .cell--1 {
      flex: 1 1 100%;
    }

    .cell--2 {
      flex: 1 1 auto;
    }

    .mast {
      display: flex;
      flex-flow: row nowrap;
      align-items: center;
      color: inherit;

      .logo {
        flex: 1 1 auto;
        display: block;
        font-size: 2.5em;
        line-height: 1;

        .icon {
          display: block;
          fill: $white;
        }
      }

      .site {
        flex: 1 1 100%;

        &__name,
        &__slogan {
          display: block;
          margin-left: .75rem;
        }

        &__name {
          font-family: $font-family-heading;
          line-height: $line-height-heading;
          font-weight: bold;
        }

        &__slogan {
          font-family: $font-family-heading;
          line-height: $line-height-heading;
          font-size: $font-size-small;
          font-style: italic;
          text-transform: uppercase;
        }
      }
    }

    .menu-toggle {
      display: block;
      padding: .125em;
      font-size: 1.75em;
      line-height: 1;
      cursor: pointer;

      .icon {
        &:first-child {
          display: block;
        }

        &:last-child {
          display: none;
        }
      }
    }

    a.mast {
      text-decoration: none;

      &:hover {
        text-decoration: none;

        .site {
          &__name,
          &__slogan {
            color: inherit;
          }

          &__name {
            text-decoration: underline;
          }
        }
      }
    }
  }

  .menu-list {
    display: none;
    list-style: none;
    margin: 0 0 -.25em;
    padding: 0;
  }

  .menu-list-item {
    list-style: none;
    margin: 0;
    padding: 0;

    a {
      display: block;
      padding: .5em 0;
      border-top: 1px dashed transparent;
      text-decoration: none;

      &:hover {
        text-decoration: underline;
      }
    }
  }

  .accordion {
    &__item-header {
      padding: .5em 0;

      &:hover {
        text-decoration: underline;
      }
    }

    &__item-body {
      margin-top: -.25em;
      padding: 0 1em .75em;
    }

    &__item-button {
      top: 50%;
      margin-top: -.5em;
      font-size: 1.25em;
      line-height: 1;
    }

    &:not(.accordion--left),
    &--right {
      .accordion__item-header {
        padding-right: 1em;
        padding-left: 1em;
      }

      .accordion__item-button {
        right: 1em;
        left: auto;
      }
    }
  }

  .filter-list {
    display: flex;
    flex-flow: row wrap;
    list-style: none;
    margin: -.125em 0;
    padding: 0;
    max-width: 32em;
  }

  .filter-list-item {
    flex: 0 0 50%;
    list-style: none;
    margin: .125em 0;
    padding: 0;

    .checkbox {
      &:hover {
        .checkbox__label {
          text-decoration: underline;
        }
      }
    }
  }

  // Dark theme

  &.dark {
    background-color: $black;
    color: $white;

    .masthead {
      .mast {
        .logo {
          .icon {
            fill: $white;
          }
        }

        .site {
          &__slogan {
            color: $grey;
          }
        }
      }

      a.mast {
        &:hover {
          .logo {
            .icon {
              fill: $yellow;
            }
          }
        }
      }

      .menu-toggle {
        .icon {
          fill: $white;
        }

        &:hover {
          .icon {
            fill: $yellow;
          }
        }
      }
    }

    .menu-list-item {
      a {
        border-top-color: rgba(white, .2);
        color: $white;

        &:hover {
          color: $yellow;

          .icon {
            fill: $yellow;
          }
        }
      }
    }

    .accordion {
      &__item-header {
       .accordion__item-button {
          .icon {
            fill: $white;
          }
        }

        &:hover {
          color: $yellow;

          .accordion__item-button {
            .icon {
              fill: $yellow;
            }
          }
        }
      }
    }
  }

  // Light theme

  &.light {
    background-color: $white;
    color: $black;

    .masthead {
      .mast {
        .logo {
          .icon {
            fill: $black;
          }
        }

        .site {
          &__slogan {
            color: $black;
          }
        }
      }

      a.mast {
        &:hover {
          .logo {
            .icon {
              fill: $yellow;
            }
          }
        }
      }

      .menu-toggle {
        .icon {
          fill: $black;
        }

        &:hover {
          .icon {
            fill: $yellow;
          }
        }
      }
    }

    .menu-list-item {
      a {
        border-top-color: rgba(black, .2);
        color: $black;
        text-decoration: none;

        &:hover {
          color: $black;
          text-decoration: underline;

          .icon {
            fill: $yellow;
          }
        }
      }
    }

    .accordion {
      &__item-header {
       .accordion__item-button {
          .icon {
            fill: $white;
          }
        }

        &:hover {
          color: $yellow;

          .accordion__item-button {
            .icon {
              fill: $yellow;
            }
          }
        }
      }
    }
  }
}
/* ... */

